src/test/resources/moderateApp/bundle/deploy/k8s/route.yaml
# Generated by IBM TransformationAdvisor
# Thu Feb 29 13:13:44 GMT 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: modresorts
  name: modresorts
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: modresorts
    weight: 100
