src/test/resources/moderateApp/bundle/deploy/k8s/service.yaml
# Generated by IBM TransformationAdvisor
# Thu Feb 29 13:13:44 GMT 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modresorts
  name: modresorts
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: modresorts
